App: add exit button to bring the user to the admin dashboard when not logged in

--- a/assets/app/src/modules/templates/main.html
+++ b/assets/app/src/modules/templates/main.html
@@ -7,6 +7,7 @@
 }" v-if="$isLoaded">
 	<div id="page-heading" :data-fsm-state="$fsmState">
 		<div class="heading-left">
+			<global-leave-button></global-leave-button>
 			<global-login-toggle></global-login-toggle>
 			<global-edit-toggle></global-edit-toggle>
 			<global-cancel-toggle></global-cancel-toggle>
