App: improve handling of `isSubmittable` and feedback for occasion/consumer/product edit states

--- a/assets/app/src/styles/receipt.scss
+++ b/assets/app/src/styles/receipt.scss
@@ -129,6 +129,12 @@
 			}
 		}
 
+		.feedback .feedback-list {
+			.item {
+				border-radius: 0px;
+			}
+		}
+
 		.item-list-footer {
 			display: flex;
 			flex-direction: row;
@@ -137,10 +143,6 @@
 				flex: 1;
 				padding: 15px;
 				border-radius: 0px;
-			}
-
-			.cancel-action {
-				flex: 2;
 			}
 
 			.submit-action {
