--- a/assets/app/src/modules/templates/receipt.html
+++ b/assets/app/src/modules/templates/receipt.html
@@ -39,7 +39,7 @@
 
 	<div class="item-list-footer">
 		<button type="button" v-if="isViewing && editable" @click="edit" class="edit-action" v-l10n.Common.Edit></button>
-		<button type="button" v-if="isEditing && hasPatches" @click="cancel" class="cancel-action" v-l10n.Common.Cancel></button>
+		<button type="button" v-if="isEditing" @click="cancel" class="cancel-action" v-l10n.Common.Cancel></button>
 		<button type="button" v-if="isEditing && receipt.length" @click="clear" class="clear-action" v-l10n.Common.Clear></button>
 		<button type="button" v-if="isEditing && submittable" @click="submit" class="submit-action" v-l10n="labelSubmit"></button>
 	</div>
