--- a/assets/app/src/modules/templates/form/input-datepicker.html
+++ b/assets/app/src/modules/templates/form/input-datepicker.html
@@ -1,3 +1,3 @@
 <div class="input-datepicker">
-	<button type="button" class="datepicker-option" @click="open" ref="input">{{value | date($l10n.Generic.DateAltFormat) }}</button>
+	<button type="button" class="datepicker-option" @click="open" ref="input">{{value | date($l10n.Generic.DateAltFormat, false) }}</button>
 </div>
