App: part 2 of improving handling of patches and feedback for occasion/consumer/product. Introduces `comparators` and `getActivePatches()` getter to distill relevant patches. Ensures only relevant patches are sent to update endpoints.

--- a/assets/app/src/modules/templates/occasions.html
+++ b/assets/app/src/modules/templates/occasions.html
@@ -81,6 +81,8 @@
 					</div>
 				</form>
 
+				<feedback name="occasion" :items="feedback"></feedback>
+
 				<div v-if="activeMode || editMode" class="detail-list occasion-statistics">
 					<div class="detail-item occasion-closed" v-if="occasionClosedDate">
 						<span class="detail-label" v-l10n.Occasion.OccasionClosedLabel></span>
