--- a/assets/app/src/styles/main.scss
+++ b/assets/app/src/styles/main.scss
@@ -114,6 +114,7 @@
 @import "./list";
 @import "./login";
 @import "./occasions";
+@import "./offline";
 @import "./orders";
 @import "./page";
 @import "./panels";
