App: enable selecting a consumer directly from the RECEIPT_SETTINGS state. Also close RECEIPT_SETTINGS from the receipt panel.

--- a/assets/app/src/modules/templates/receipt.html
+++ b/assets/app/src/modules/templates/receipt.html
@@ -59,6 +59,7 @@
 	<feedback name="receipt" :items="feedback"></feedback>
 
 	<div class="item-list-footer">
+		<button type="button" v-if="isSettings" @click="toggleSettings" class="continue-action" v-l10n.Common.Continue></button>
 		<button type="button" v-if="isViewing && editable" @click="edit" class="edit-action" v-l10n.Common.Edit></button>
 		<button type="button" v-if="isEditing" @click="cancel" class="cancel-action" v-l10n.Common.Cancel></button>
 		<button type="button" v-if="isEditing && receipt.length" @click="clear" class="clear-action" v-l10n.Common.Clear></button>
