App: move price form input to text type with custom validation, because type number does not properly support decimal input with commas and periods.

--- a/assets/app/src/modules/templates/form/input-price.html
+++ b/assets/app/src/modules/templates/form/input-price.html
@@ -1,8 +1,8 @@
 <div class="input-price">
 	<input
-		type="number"
+		type="text"
+		inputmode="decimal"
 		ref="price"
-		step="0.01"
 		:value="value"
 		@input="input"
 		@keydown.up.ctrl.prevent="plus010"
