App: support usting <Enter> to submit forms and edit states (occasion/consumer/product/receipt)

--- a/assets/app/src/modules/templates/consumer.html
+++ b/assets/app/src/modules/templates/consumer.html
@@ -14,7 +14,7 @@
 
 	<div class="panel-content">
 		<div class="item-details">
-			<form v-if="editable" class="detail-list edit-consumer" @submit.prevent novalidate>
+			<form v-if="editable" id="the-consumer" class="detail-list edit-consumer" @submit.prevent="update" novalidate>
 				<div class="detail-item consumer-show">
 					<span class="detail-label" v-l10n.Consumer.ConsumerShow></span>
 					<span v-if="isViewing" class="detail-value">{{consumerShow | boolean}}</span>
@@ -52,6 +52,6 @@
 	<div class="panel-footer" v-if-not-empty>
 		<button type="button" v-if="isViewing && editable" @click="edit" class="edit-action" v-focus v-l10n.Common.Edit></button>
 		<button type="button" v-if="!isViewing" @click="cancel" class="cancel-action" v-l10n.Common.Cancel></button>
-		<button type="button" v-if="!isViewing" :disabled="!submittable" @click="update" class="update-action" v-l10n.Common.Save></button>
+		<button type="submit" v-if="!isViewing" form="the-consumer" :disabled="!submittable" @click="update" class="update-action" v-l10n.Common.Save></button>
 	</div>
 </div>
