--- a/assets/app/src/modules/templates/occasions.html
+++ b/assets/app/src/modules/templates/occasions.html
@@ -61,7 +61,7 @@
 			</div>
 
 			<div v-if="createMode || activeMode || editMode" class="item-details create-occasion">
-				<form class="detail-list edit-occasion" @submit.prevent novalidate>
+				<form id="the-occasion" class="detail-list edit-occasion" @submit.prevent="createMode ? get : update" novalidate>
 					<div class="detail-item occasion-title">
 						<span class="detail-label" v-l10n.Occasion.TitleLabel></span>
 						<span v-if="activeMode" class="detail-value">{{title}}</span>
@@ -119,7 +119,7 @@
 		<button type="button" v-if="editMode && closable" @click="closeOccasion" class="close-action" v-l10n.Occasion.Close></button>
 		<button type="button" v-if="editMode && reopenable" @click="reopenOccasion" class="reopen-action" v-l10n.Occasion.Reopen></button>
 		<button type="button" v-if="editMode" @click="cancel" class="cancel-action" v-l10n.Common.Cancel></button>
-		<button type="button" v-if="editMode" :disabled="!submittable" @click="update" class="update-action" v-l10n.Common.Save></button>
-		<button type="button" v-if="createMode" :disabled="!creatable" @click="get" class="get-action" v-l10n.Occasion.Create></button>
+		<button type="submit" v-if="editMode" form="the-occasion" :disabled="!submittable" @click="update" class="update-action" v-l10n.Common.Save></button>
+		<button type="submit" v-if="createMode" form="the-occasion" :disabled="!creatable" @click="get" class="get-action" v-l10n.Occasion.Create></button>
 	</div>
 </div>
