--- a/assets/app/src/styles/page.scss
+++ b/assets/app/src/styles/page.scss
@@ -8,6 +8,7 @@
 	width: 100%;
 	padding: 15px;
 	background: var(--color-primary);
+	color: var(--color-primary-contrast);
 	border-bottom: 4px solid var(--color-secondary);
 	z-index: 100;
 
