--- a/includes/extend/vgsr/assets/css/app.css
+++ b/includes/extend/vgsr/assets/css/app.css
@@ -2,12 +2,12 @@ body.incassoos-app #incassoos-app {
 	--color-primary: #33a537;
 	--color-primary-contrast: #fafaff;
 	--color-secondary: #93e953;
-	--color-secondary-contrast: #fafaff;
+	--color-secondary-contrast: #444;
 }
 
 body.incassoos-app #incassoos-app.darkmode {
 	--color-primary: #237125;
-	--color-primary-contrast: #c9d1d9;
+	--color-primary-contrast: #fafaff;
 	--color-secondary: #649b39;
-	--color-secondary-contrast: #c9d1d9;
+	--color-secondary-contrast: #fafaff;
 }
