--- a/assets/app/src/styles/main.scss
+++ b/assets/app/src/styles/main.scss
@@ -43,6 +43,8 @@
 		--button-background-hover:    #{$button-hover};
 		--button-color-disabled:      #{$button-color-disabled};
 		--button-background-disabled: #{$button-disabled};
+		--color-submit:               deepskyblue;
+		--color-submit-contrast:      #fff;
 
 		// Feedback
 		--feedback-color:             #eee;
