--- a/assets/app/src/styles/form.scss
+++ b/assets/app/src/styles/form.scss
@@ -264,8 +264,8 @@
 
 	.radio-option {
 		&.is-selected {
+			color: var(--color-primary-contrast);
 			background: var(--color-primary);
-			color: var(--button-background);
 		}
 
 		&:not(:last-child) {
