--- a/assets/app/src/styles/variables.scss
+++ b/assets/app/src/styles/variables.scss
@@ -11,7 +11,7 @@ $font-family-default: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxy
 //
 
 $text-color: #444;
-$text-color-dark: #fafaff; // #c9d1d9;
+$text-color-dark: #c9d1d9;
 
 /**
  * Return a color's contrast color for text as light or dark
