--- a/assets/app/src/styles/form.scss
+++ b/assets/app/src/styles/form.scss
@@ -171,7 +171,7 @@
 	.numpad-grid {
 		display: grid;
 		grid-template-columns: repeat(3, minmax(80px, 1fr));
-		grid-template-rows: repeat(4, 50px);
+		grid-template-rows: repeat(4, minmax(65px, 1fr));
 		grid-template-areas:
 			"1 2 3"
 			"4 5 6"
