App/Product: apply hidden product category functionality. Identifies single products and product categories as hidden. Products in hidden categories are not available for selection in orders.

--- a/assets/app/src/modules/templates/products.html
+++ b/assets/app/src/modules/templates/products.html
@@ -55,6 +55,14 @@
 						<span class="screen-reader-text" v-l10n.Product.SelectLess="p.title"></span>
 						<i class="dashicons dashicons-minus"></i>
 					</button>
+
+					<div
+						v-if="$isSettings && isProductCategoryHidden(p.productCategory)"
+						class="hidden-item"
+						v-l10n-title.Product.HiddenProduct>
+						<span class="screen-reader-text" v-l10n.Product.HiddenProduct></span>
+						<i class="dashicons dashicons-hidden"></i>
+					</div>
 				</button>
 			</li>
 
