--- a/assets/app/src/modules/templates/product.html
+++ b/assets/app/src/modules/templates/product.html
@@ -15,7 +15,10 @@
 
 				<div class="detail-item product-category" v-if="haveProductCategories">
 					<span class="detail-label" v-l10n.Product.ProductCategory></span>
-					<span v-if="isViewing">{{productCategoryLabel}}</span>
+					<span v-if="isViewing" class="detail-value">
+						<i v-if="productCategoryItem.icon" class="detail-icon dashicons" :class="'dashicons-' + productCategoryItem.icon" v-l10n-title="productCategoryItem.iconTitle"></i>
+						{{productCategoryItem.label}}
+					</span>
 					<input-dropdown v-if="!isViewing" :options="availableProductCategories" class="detail-value" v-model="productCategory"></input-dropdown>
 				</div>
 
