VGSR: reset brightness of the app's primary contrast color in standard mode.

--- a/includes/extend/vgsr/assets/css/app.css
+++ b/includes/extend/vgsr/assets/css/app.css
@@ -1,6 +1,6 @@
 body.incassoos-app #incassoos-app {
 	--color-primary: #33a537;
-	--color-primary-contrast: #c9d1d9;
+	--color-primary-contrast: #fff;
 	--color-secondary: #93e953;
 	--color-secondary-contrast: #444;
 }
